--- a/src/Styles/_footer.scss
+++ b/src/Styles/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   p{
     font-size: 16px;
-    margin-top: 50px;
+    margin-top: 39px;
     padding-top: 10px;
     padding-bottom: 10px;
     background-color: #3f3d56;
@@ -9,5 +9,6 @@ footer {
     color: white;
     letter-spacing: 1px;
     font-weight: 300;
+    width: 100%;
   }
 }
