--- a/src/Styles/_header.scss
+++ b/src/Styles/_header.scss
@@ -5,8 +5,8 @@
 
 img {
   width: 126px;
-  margin-top: -11px;
-  margin-right: 29px;
+  margin-top: 0px;
+  margin-right: 13px;
 }
 
 h1 {
@@ -16,7 +16,7 @@ h1 {
   font-size: 90px;
   margin-top: 0;
   margin-bottom: 21px;
-  padding-top: 30px;
+  padding-top: 36px;
   color: #373737;
   letter-spacing: 2px;
   span {
