--- a/src/Styles/_log.scss
+++ b/src/Styles/_log.scss
@@ -6,9 +6,9 @@ ul {
     text-align: center;
     padding: 5px;
     cursor: pointer;
-    width: 52%;
+    width: 55%;
     margin: 0 auto;
-    margin-top: 50px;
+    margin-top: 39px;
     background-color: #3f3d56;
     border-radius: 20px;
     position: relative;
